<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/botones_linear">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/traductor_img"
                android:layout_gravity="center"
                android:contentDescription="@null"/>

            <EditText
                android:id="@+id/et_idioma_origen"
                android:hint="@string/et_idioma_origen"
                android:gravity="start"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="100dp"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tv_idioma_destino"
                android:text="@string/tv_idioma_destino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:textSize="18sp"/>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/botones_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_above="@+id/btn_traducir">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_elegir_idioma"
            android:text="@string/btn_elegir_idioma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cornerRadius="10dp"
            android:layout_weight="1"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/icono_cambiar"
            android:background="@android:color/transparent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_idioma_elegido"
            android:text="@string/btn_idioma_elegido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cornerRadius="10dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_traducir"
        android:text="@string/btn_traducir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cornerRadius="10dp"
        app:icon="@drawable/icono_traducir24"/>

</RelativeLayout>